UPDATE files to address bugs/typos and successfully run Create, ClearAll Tamagotchis.
Co-authored-by: Jonathan Lu <jdlu.coding@gmail.com>
Co-authored-by: DonovanWeber <donovanweber03@gmail.com>

--- a/Tamagotchi/Views/Home/Index.cshtml
+++ b/Tamagotchi/Views/Home/Index.cshtml
@@ -7,7 +7,7 @@
   </head>
   <body>
     <h1>Tamagotchi!</h1>
-    <a href='/items/new'>Create new Tamagotchi</a>
-    <a href='/items'>View all your Tamagotchis!</a>
+    <a href='/tamagotchis/new'>Create new Tamagotchi</a>
+    <a href='/tamagotchis'>View all your Tamagotchis!</a>
   </body>
 </html>
