Cleanup/backup to functioning UI and ADD health display.
Co-authored-by: Liam Campbell <liam22campbell@gmail.com>

--- a/Tamagotchi/Views/Tamagotchis/Index.cshtml
+++ b/Tamagotchi/Views/Tamagotchis/Index.cshtml
@@ -16,7 +16,7 @@
     <ul>
       @foreach (Tamagotchi tamagotchi in Model)
       {
-        <li><a href='/tamagotchis/@tamagotchi.Id'>@tamagotchi.Name</a></li>
+        <li><a href='/tamagotchis/@tamagotchi.Id'>@tamagotchi.Name : @tamagotchi.Health</a></li>
       }
     </ul>
 
