--- a/Tamagotchi/Views/Tamagotchis/New.cshtml
+++ b/Tamagotchi/Views/Tamagotchis/New.cshtml
@@ -10,7 +10,7 @@
 
 <body>
   <form action="/tamagotchis" method="post">
-    <label for="name">Add a new Tamagotchi!</label>
+    <label for="name">Add a NEW Tamagotchi!</label>
     <input id="name" name="name" type="text">
     <button type="submit">Create</button>
   </form>
